fix: nowrap button, field mutations and popover links

--- a/designsystem/button/button.module.css
+++ b/designsystem/button/button.module.css
@@ -5,6 +5,7 @@
 		border-radius: calc(5 / 18 * 1em); /* 5px border-radius */
 		display: inline-flex;
 		font-weight: 500;
+		max-width: 100%;
 		transition-duration: .2s;
 		transition-property: background-color, scale, translate;
 		vertical-align: middle;
@@ -31,6 +32,13 @@
 
 		&:active {
 			scale: 0.95;
+		}
+
+		& [data-nowrap] {
+			overflow: clip;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			min-width: 0;
 		}
 
 		/**
