--- a/designsystem/fieldset/fieldset.module.css
+++ b/designsystem/fieldset/fieldset.module.css
@@ -34,19 +34,5 @@
 				content: none;
 			}
 		}
-
-		/**
-		 * Child added event inspired by:
-		 * https://davidwalsh.name/detect-node-insertion
-		 */
-		& > [class*="validation"] {
-			animation: fieldsetValidationAdded 100ms; /* Longer animation time than .field to ensure correct validation shows */
-		}
-	}
-}
-
-@keyframes fieldsetValidationAdded {
-	from {
-		clip: none;
 	}
 }
